Fix contrast issue with conjugation tables in wiktionary (#164)
* Fix contrast issue with conjugation tables - text too light

* Change background to be darker in inflection tables

Tested with following languages:
- Spanish: https://en.wiktionary.org/wiki/limpiarse
- German: https://en.wiktionary.org/wiki/sitzen#Conjugation
- French: https://en.wiktionary.org/wiki/cro%C3%AEtre
- Latin: https://en.wiktionary.org/wiki/secerno#Latin
- Italian: https://en.wiktionary.org/wiki/secernere#Italian
- Turkish: https://en.wiktionary.org/wiki/aramak

* Remove yellow-3, use blue instead

* Use more general selector

* Change yellow to brown

* Change red to dark orange

* A few other shades

See
- Spanish https://en.wiktionary.org/wiki/ser\#Conjugation_5
- Galician https://en.wiktionary.org/wiki/ser\#Conjugation_3
- Asturian https://en.wiktionary.org/wiki/ser\#Conjugation
- Hungarian https://en.wiktionary.org/wiki/ser\#Declension

--- a/wikipedia-dark.user.css
+++ b/wikipedia-dark.user.css
@@ -100,6 +100,7 @@ regexp("https?:\/\/.*wik(i|t).*(org|jp).*") {
     --yellow-2: #ffdd7f;
     --orange-1: #e53e00;
     --orange-2: #e08b26;
+    --orange-3: #4d2b01;
     --purple-d: #241738;
     --purple-0: #312641;
     --purple-1: #382b4a;
@@ -6545,6 +6546,58 @@ regexp("^https://(foundation|donate)\.wikimedia\.org.*$") {
   .NavContent .translations form span[style*="color"],
   .list-switcher-element a[role="button"] {
     color: var(--base-color) !important;
+  }
+  *[style*="background:#c0cfe4"],
+  *[style*="background:#9999DF"] {
+    background-color: var(--blue-4) !important;
+  }
+  *[style*="background:#a0ade3"],
+  *[style*="background:#ccccff"],
+  *[style*="background: rgb(242, 242, 255)"],
+  *[style*="background:#ccd8ff"],
+  *[style*="background:#c0d8e4"] {
+    background-color: var(--blue-3) !important;
+  }
+  *[style*="background:#e2e4c0"],
+  *[style*="background-color:#e2e4c0"],
+  *[style*="background:#d0cfa4"] {
+    background-color: var(--brown-2) !important;
+  }
+  *[style*="background:#e0e0b0"],
+  *[style*="background:#e2c0c0"] {
+    background-color: var(--pink-1) !important;
+  }
+  *[style*="background:#c0e4c0"],
+  *[style*="background:#99cc99"],
+  *[style*="background:#99CC99"] {
+    background-color: var(--green-3) !important;
+  }
+  *[style*="background:#cfedcc"] {
+    background-color: var(--green-4) !important;
+  }
+  *[style*="background:#e4d4c0"],
+  *[style*="background:#f2caa4"] {
+    background-color: var(--orange-3) !important;
+  }
+  *[style*="background:#ECECEC"],
+  *[style*="background:#C0C0C0"],
+  *[style*="background-color:#C0C0C0"],
+  *[style*="background:#d0d0d0"],
+  *[style*="background:#EFEFEF"],
+  *[style*="background: rgb(204, 204, 204)"],
+  *[style*="background:#e2f6e2"],
+  *[style*="background: #e2f6e2"],
+  *[style*="background: #CCC"] {
+    background-color: var(--gray-4) !important;
+  }
+  div[style*="background:#d9ebff"],
+  div.CategoryTreeItem,
+  *[style*="background:#e0e0e0"],
+  *[style*="background:#DEDEDE"]  {
+    background-color: var(--gray-3) !important;
+  }
+  table.inflection-table[style*="color: rgb(0%,0%,30%)"] {
+    color: var(--gray-c) !important;
   }
   .HQToggle::before, .NavToggle::before, .HQToggle::after, .NavToggle::after {
     color: var(--base-color);
